--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,6 +16,11 @@ h6 {
   font-family: "Noto Sans", sans-serif !important;
 }
 
+.img {
+  width: 100%;
+  height: 100%;
+}
+
 .bg {
   background: #1b1b1b !important;
 }
@@ -42,6 +47,10 @@ h6 {
 
 .start {
   justify-content: flex-start;
+}
+
+.center {
+  align-items: center;
 }
 
 .mx {
@@ -88,7 +97,7 @@ h6 {
 @media (min-width: 1269px) {
   .title {
     line-height: 1.2em;
-    font-size: 5.7em;
+    font-size: 6.5em;
   }
   .desc1 {
     font-size: 1.5em;
