--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,10 @@ a,
 h6 {
     font-family: 'Noto Sans', sans-serif !important;
 }
+.img {
+    width: 100%;
+    height: 100%;
+}
 $clr: #006000;
 .bg {
     background: #1b1b1b !important;
@@ -35,6 +39,9 @@ $clr: #006000;
 }
 .start {
     justify-content: flex-start;
+}
+.center {
+    align-items: center;
 }
 .mx {
     max-width: 1300px;
@@ -81,7 +88,7 @@ $clr: #006000;
 @media (min-width:1269px) {
     .title {
         line-height: 1.2em;
-        font-size: 5.7em;
+        font-size:6.5em;
     }
     .desc1 {
         font-size: 1.5em;
