--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,8 @@ body {
 button,
 h1,
 h2,
+ul,li,
+p,
 h3,
 h4,
 h5,
@@ -18,9 +20,12 @@ h6 {
     width: 100%;
     height: 100%;
 }
-$clr: #006000;
+$clr: #112a6f;
 .bg {
     background: #1b1b1b !important;
+}
+.border {
+    border-radius: 8px;
 }
 .br {
     border-bottom: 1px solid #00000013;
@@ -47,13 +52,33 @@ $clr: #006000;
     max-width: 1300px;
     margin: 0 auto;
 }
+.auto {
+    margin: 0 auto;
+}
+.color {
+    color : $clr;
+}
+.gap {
+    gap:.5em
+}
+.shadow {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.desc2 {
+    color:rgb(50, 50, 50);
+    font-weight: 300;
+}
 .title {
     // font-size: 6em;
     line-height: 1em;
     font-weight: bolder;
 }
+.title2 {
+    max-width: 900px;
+    font-weight: bold;
+}
 .desc1 {
-    font-weight: 300;
+    font-weight: 400;
     color: #d2d2d2;
 }
 .topbar-links{
@@ -67,6 +92,31 @@ $clr: #006000;
         }
     }
 }
+.desc3 {
+    font-weight: 300;
+    color: #d2d2d2;
+}
+.swiper-button-prev ,.swiper-button-disabled  , .swiper-button-next {
+    color :white !important;
+    background: transparent !important;
+    border-radius: 50%;
+    width: 40px !important;
+    height: 40px !important; 
+}
+
+// .price-card {
+    // h1 {
+        // font-weight: 500;
+        // font-size:1.4em;
+    // }
+// } 
+.plan-perks {
+    ul {
+        li {
+            padding-top: .35em;
+        }
+    }
+}
 @media (max-width: 768px) {
     .title {
         line-height: 1.2em;
@@ -74,6 +124,15 @@ $clr: #006000;
     }
     .desc1 {
         font-size: 1em;
+    }
+    .desc2 {
+        font-size: 1em;
+    }
+    .title2 {
+        font-size: 1.9em;
+    }
+    .title3 {
+            font-size: 1.5em;
     }
 }
 @media (min-width:769px) {
@@ -84,6 +143,15 @@ $clr: #006000;
     .desc1 {
         font-size: 1.2em;
     }
+    .title3 {
+        font-size: 2.5em;
+}
+    .title2{ 
+        font-size: 3.5em;
+    }
+    .desc2 {
+        font-size: 1.2em;
+    }
 }
 @media (min-width:1269px) {
     .title {
@@ -92,5 +160,11 @@ $clr: #006000;
     }
     .desc1 {
         font-size: 1.5em;
+    }
+    .title3 {
+        font-size: 3em;
+}
+    .title2 {
+        font-size: 4.5em;
     }
 }
