--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,6 +18,14 @@ h6 {
   font-family: "Noto Sans", sans-serif !important;
 }
 
+.white {
+  color: white;
+}
+
+.grayed {
+  color: rgb(174, 174, 174);
+}
+
 .img {
   width: 100%;
   height: 100%;
@@ -49,6 +57,10 @@ h6 {
 
 .items-center {
   justify-content: center;
+}
+
+.items-between {
+  justify-content: space-between;
 }
 
 .start {
@@ -100,6 +112,22 @@ h6 {
   color: #d2d2d2;
 }
 
+.footer-title {
+  color: white;
+  font-weight: 500;
+  font-size: 1.3em;
+}
+
+.footer-links {
+  padding: 0;
+}
+.footer-links li {
+  padding-top: 0.45em;
+}
+.footer-links li a {
+  color: #5d7fff;
+}
+
 .topbar-links a {
   text-decoration: none;
   color: white;
@@ -119,6 +147,10 @@ h6 {
   border-radius: 50%;
   width: 40px !important;
   height: 40px !important;
+}
+
+.form input {
+  color: white;
 }
 
 .plan-perks ul li {
