--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,6 +88,10 @@ h6 {
   gap: 0.5em;
 }
 
+.gap-2 {
+  gap: 1em;
+}
+
 .shadow {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -126,6 +130,10 @@ h6 {
 }
 .footer-links li a {
   color: #5d7fff;
+}
+
+.black {
+  color: black !important;
 }
 
 .topbar-links a {
