--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -72,6 +72,9 @@ $clr: #112a6f;
 .gap {
     gap:.5em
 }
+.gap-2 {
+    gap: 1em;
+}
 .shadow {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -105,6 +108,9 @@ $clr: #112a6f;
             color :#5d7fff;
         }
     }
+}
+.black {
+    color : black !important;
 }
 .topbar-links{
 
