--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -44,7 +44,7 @@ h6 {
 }
 
 .flex {
-  display: flex;
+  display: flex !important;
 }
 
 .end {
@@ -52,11 +52,11 @@ h6 {
 }
 
 .col {
-  flex-direction: column;
+  flex-direction: column !important;
 }
 
 .row {
-  flex-direction: row;
+  flex-direction: row !important;
 }
 
 .items-center {
@@ -150,7 +150,26 @@ h6 {
 
 .desc3 {
   font-weight: 300 !important;
-  color: #d2d2d2 !important;
+  color: #d2d2d2;
+}
+
+.layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.3019607843);
+  z-index: 55;
+  width: 100%;
+  height: 100%;
+}
+
+.relative {
+  position: relative !important;
+}
+
+.cover {
+  -o-object-fit: cover !important;
+     object-fit: cover !important;
 }
 
 .swiper-button-prev, .swiper-button-disabled, .swiper-button-next {
