--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -130,11 +130,15 @@ $clr: #112a6f;
     font-weight: 300 !important;
     color: #d2d2d2 ;
 }
+.title4 {
+    font-weight: 500 !important;
+    font-size: 1.3em !important;
+}
 .layer {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: #0000004d;
+    background-color:#00000070;
     z-index: 55;
     width: 100%;
     height: 100%;
