--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -154,8 +154,13 @@ h6 {
 }
 
 .title4 {
-  font-weight: 500 !important;
+  font-weight: 700 !important;
   font-size: 1.3em !important;
+}
+
+.desc4 {
+  font-weight: 400 !important;
+  color: rgb(95, 95, 95) !important;
 }
 
 .layer {
