--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -131,8 +131,12 @@ $clr: #112a6f;
     color: #d2d2d2 ;
 }
 .title4 {
-    font-weight: 500 !important;
+    font-weight: 700 !important;
     font-size: 1.3em !important;
+}
+.desc4 {
+    font-weight: 400 !important;
+    color:rgb(95, 95, 95) !important;
 }
 .layer {
     position: absolute;
