--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -163,6 +163,14 @@ h6 {
   color: rgb(95, 95, 95) !important;
 }
 
+.op0 {
+  opacity: 0;
+}
+
+.translate {
+  transform: translateY(0.55em);
+}
+
 .layer {
   position: absolute;
   top: 0;
