--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -115,6 +115,10 @@ $clr: #112a6f;
 .black {
     color : black !important;
 }
+.decor-none {
+    text-decoration: none !important;
+
+}
 .topbar-links{
 
     a {
