--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -117,7 +117,9 @@ $clr: #112a6f;
 }
 .decor-none {
     text-decoration: none !important;
-
+}
+.link-title {
+    text-decoration-color: black !important;
 }
 .topbar-links{
 
