--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -144,6 +144,10 @@ h6 {
   text-decoration: none !important;
 }
 
+.link-title {
+  text-decoration-color: black !important;
+}
+
 .topbar-links a {
   text-decoration: none;
   color: white;
